--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,12 +3,13 @@
     // Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
     // List of extensions which should be recommended for users of this workspace.
     "recommendations": [
-        "davidanson.vscode-markdownlint",
+        "ms-python.isort",
         "ms-python.python",
         "ms-python.vscode-pylance",
         "ms-toolsai.jupyter",
         "ms-toolsai.jupyter-keymap",
         "ms-toolsai.jupyter-renderers",
+        "donjayamanne.vscode-default-python-kernel",
         "VisualStudioExptTeam.vscodeintellicode"
     ],
     // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
