--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,6 @@
     "editor.formatOnSave": true,
     "files.trimTrailingWhitespace": true,
     "files.trimFinalNewlines": true,
-    "remote.SSH.remoteServerListenOnSocket": true,
     "git.confirmSync": false,
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
@@ -18,4 +17,8 @@
     "editor.minimap.maxColumn": 80,
     "notebook.formatOnCellExecution": true,
     "notebook.formatOnSave.enabled": true,
+    "python.analysis.typeCheckingMode": "off",
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportUndefinedVariable": "none"
+    }
 }
